<resources>
    <string name="app_name">Virtual Inventory</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="keep_me_signed_in">Keep me Signed in</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="choose_your_interest">Choose Your Interest</string>
    <string name="music">music</string>
    <string name="dance">Dance</string>
    <string name="fashion">Fashion</string>
    <string name="drawing">Drawing</string>
    <string name="art_craft"><![CDATA[Art & Craft]]></string>
    <string name="animation">Animation</string>
    <string name="do_it_yourself">DIY</string>
    <string name="cooking">Cooking</string>
    <string name="writing">Photography</string>
    <string name="acting">Acting</string>
    <string name="blogging">Blogging</string>
    <string name="sports">Sports</string>
    <string name="quotes">Quotes</string>
    <string name="games">Video Games</string>
    <string name="submit">Done</string>
</resources>