<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sssssconcept"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:fontFamily="@font/comicbd"
            android:gravity="center"
            android:text="VI"
            android:textSize="20sp"
            android:textColor="#FF000000"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="Username"
            android:fontFamily="@font/segoepr"
            android:textColorHint="#FF000000"
            android:background="@drawable/custombutton"
            tools:ignore="HardcodedText"
            android:autofillHints="username" />
        <EditText
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:fontFamily="@font/segoepr"
            android:textColorHint="#FF000000"
            android:background="@drawable/custombutton"
            android:autofillHints="password" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_signed_in"
            android:textColor="#FF000000"
            android:hint="@string/keep_me_signed_in"
            android:layout_marginTop="15dp"
            android:buttonTint="#FF000000"
            />
        <Button
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:textColor="#FF000000"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:textColor="#FF000000"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="#FF000000"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>