<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sssssconcept">


    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custombutton"
        android:fontFamily="@font/segoepr"
        android:gravity="center"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FF000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="304dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custombutton"
        android:ems="10"
        android:fontFamily="@font/segoepr"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="#FF000000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="352dp"
        android:autofillHints="username" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custombutton"
        android:fontFamily="@font/segoepr"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#FF000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="400dp"
        android:autofillHints="password" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custombutton"
        android:fontFamily="@font/segoepr"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="#FF000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="450dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/button"
        android:layout_width="195dp"
        android:layout_height="45dp"
        android:background="@drawable/buttons"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="531dp" />

</androidx.constraintlayout.widget.ConstraintLayout>